--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"short_name":"","display":"standalone","background_color":"#ffffff","name":"","theme_color":"#ffffff","icons":[{"src":"images\/android-chrome-512x512-7ed8d4.png","sizes":"512x512","type":"image\/png"},{"src":"images\/android-chrome-196x196-3944a8.png","sizes":"196x196","type":"image\/png"}]}
+{"short_name":"","display":"standalone","background_color":"#ffffff","name":"","theme_color":"#ffffff","icons":[{"src":"images\/android-chrome-196x196-c2f447.png","sizes":"196x196","type":"image\/png"}]}
